# Mutect

./: .gitignore  README.md  bamlet_maker.py  generate_report_graphs.py  main.py  make_ml_loci.py  package-lock.json  pyproject.toml  run_pipeline.py  setup_and_run.sh
output/: balanced_dataset.json  normal_sequences.json  predictions_strs_only.json  predictions_summary.json  processed_variants.json  raw_variants.json  str_variants.json  training_results.json
src/: __init__.py  cli.py
src/data/: api.py  data_processor.py  filters.py  preprocessing.py  ref_genome_data.py  variant_processor.py
src/input/: bam_process.py
src/model/: str_classifier.py
src/utils/: data_utils.py  genetic_utils.py  model_utils.py  prediction_utils.py
web/: README.md
web/frontend/: index.html  package-lock.json  package.json  vite.config.ts
web/frontend/src/: App.tsx  main.tsx  types.ts
web/frontend/src/components/: LociList.tsx  PredictionsTable.tsx  SummaryCards.tsx
web/frontend/src/lib/: api.ts
web/src/: backend.py
